--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </ul>
 
   <h2>Contact</h2>
-  <p>Email: info@rightwayintellectsolutions.com</p>
+  <p>Email: hr@rightwayintellectsolutions.com</p>
 </body>
 </html>
