--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li>IoT & Fleet Management</li>
     <li>CCTV & Surveillance</li>
     <li>IT Infrastructure</li>
+    <li>Audio Visual Solutions </li>
     <li>Manpower Consulting</li>
   </ul>
 
