--- a/index.html
+++ b/index.html
@@ -1,26 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Rightway Intellect Solutions</title>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: #f5f7fa;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* HEADER */
+    header {
+      background: linear-gradient(135deg, #0a3d62, #1e90ff);
+      color: #fff;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+    }
+
+    header p {
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
+    /* SECTIONS */
+    section {
+      max-width: 1100px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 40px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      color: #0a3d62;
+      margin-bottom: 15px;
+      border-left: 5px solid #1e90ff;
+      padding-left: 10px;
+    }
+
+    /* SERVICES GRID */
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .service-box {
+      background: #f0f5ff;
+      padding: 20px;
+      border-radius: 8px;
+      transition: transform 0.2s;
+    }
+
+    .service-box:hover {
+      transform: translateY(-5px);
+    }
+
+    /* CONTACT */
+    .contact p {
+      margin: 8px 0;
+    }
+
+    a {
+      color: #1e90ff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    /* FOOTER */
+    footer {
+      background: #0a3d62;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    footer p {
+      margin: 5px 0;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
+
+<!-- HERO SECTION -->
+<header>
   <h1>Rightway Intellect Solutions</h1>
   <p>Automate. Control. Thrive.</p>
+</header>
 
+<!-- ABOUT -->
+<section>
   <h2>About Us</h2>
-  <p>Rightway Intellect Solutions provides IoT, IT infrastructure and automation solutions across Tamil Nadu.</p>
+  <p>
+    Rightway Intellect Solutions is a technology-focused company delivering
+    reliable IT infrastructure, IoT-based solutions, CCTV surveillance,
+    and automation services across Tamil Nadu.
+  </p>
+  <p>
+    We help businesses simplify operations, improve visibility,
+    and achieve smarter control through modern technology.
+  </p>
+</section>
 
-  <h2>Services</h2>
-  <ul>
-    <li>IoT & Fleet Management</li>
-    <li>CCTV & Surveillance</li>
-    <li>IT Infrastructure</li>
-    <li>Audio Visual Solutions </li>
-    <li>Manpower Consulting</li>
-  </ul>
+<!-- SERVICES -->
+<section>
+  <h2>Our Services</h2>
+  <div class="services">
+    <div class="service-box">
+      <strong>IoT & Fleet Management</strong><br>
+      Smart tracking and monitoring solutions for vehicles and assets.
+    </div>
+    <div class="service-box">
+      <strong>CCTV & Surveillance</strong><br>
+      Secure and scalable surveillance systems for businesses.
+    </div>
+    <div class="service-box">
+      <strong>IT Infrastructure</strong><br>
+      Networking, systems, and enterprise IT solutions.
+    </div>
+    <div class="service-box">
+      <strong>Automation Solutions</strong><br>
+      Intelligent automation for improved efficiency and control.
+    </div>
+    <div class="service-box">
+      <strong>Manpower Consulting</strong><br>
+      Skilled manpower solutions tailored to business needs.
+    </div>
+  </div>
+</section>
 
-  <h2>Contact</h2>
-  <p>Email: hr@rightwayintellectsolutions.com</p>
+<!-- CONTACT -->
+<section class="contact">
+  <h2>Contact Us</h2>
+  <p>Email:
+    <a href="mailto:support@rightwayintellectsolutions.com">
+      support@rightwayintellectsolutions.com
+    </a>
+  </p>
+  <p>Phone: +91-XXXXXXXXXX</p>
+  <p>Location: Tamil Nadu, India</p>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>© 2025 Rightway Intellect Solutions</p>
+  <p>All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
