--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
   <h2>Contact Us</h2>
   <p>Email:
     <a href="mailto:support@rightwayintellectsolutions.com">
-      support@rightwayintellectsolutions.com
+      hr@rightwayintellectsolutions.com
     </a>
   </p>
-  <p>Phone: +91-XXXXXXXXXX</p>
+  <p>Phone: +91-9488625619</p>
   <p>Location: Tamil Nadu, India</p>
 </section>
 
