--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     }
 
     /* HEADER */
-    header {
-      background: linear-gradient(135deg, #0a3d62, #1e90ff);
-      color: #fff;
-      padding: 60px 20px;
-      text-align: center;
-    }
+   <header>
+  <img src="logo.png" alt="Rightway Intellect Solutions Logo" style="height:80px;">
+  <h1>Rightway Intellect Solutions</h1>
+  <p>Automate. Control. Thrive.</p>
+</header>
+
 
     header h1 {
       margin: 0;
