--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
       hr@rightwayintellectsolutions.com
     </a>
   </p>
-  <p>Phone: +91-9488625619</p>
-  <p>Location: Tamil Nadu, India</p>
+  <p>Phone     : +91-9488625619</p>
+  <p>Location  : 117, 2nd Floor,
+                 Vaigai Colony, Anna Nagar
+                 Madurai 625020
+                 Tamil Nadu, India</p>
 </section>
 
 <!-- FOOTER -->
