--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     /* HEADER */
    <header>
-  <img src="logo.png" alt="Rightway Intellect Solutions Logo" style="height:80px;">
+  <img src="RIS.png" alt="Rightway Intellect Solutions Logo" style="height:80px;">
   <h1>Rightway Intellect Solutions</h1>
   <p>Automate. Control. Thrive.</p>
 </header>
