Update website layout index.html

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <div class="header-text">
           <h1>Rightway Intellect Solutions</h1>
-          <p>Automate. Control. Thrive.</p>
+          <p>Automate | Control | Thrive.</p>
         </div>
       </div>
 
