Formal Layout Update index.html

--- a/index.html
+++ b/index.html
@@ -220,14 +220,58 @@
   <section id="about">
     <h2>About Us</h2>
     <p>
-      Rightway Intellect Solutions is a technology-focused company delivering
-      reliable IT infrastructure, IoT-based solutions, CCTV surveillance,
-      and automation services across Tamil Nadu.
-    </p>
-    <p>
-      We help businesses simplify operations, improve visibility,
-      and achieve smarter control through modern technology.
-    </p>
+  <strong>Rightway Intellect Solutions</strong> is a technology-driven solutions company
+  focused on delivering end-to-end, consultative, and future-ready solutions for
+  modern workplaces and institutions.
+</p>
+
+<p>
+  We specialize in designing, integrating, and implementing IT infrastructure,
+  CCTV surveillance systems, Audio-Visual solutions, Interactive Panels,
+  Active LED displays, and enterprise software licenses including
+  <strong>STATA</strong> and <strong>IBM</strong>.
+</p>
+
+<p>
+  What differentiates us is our <strong>solution-first and consultative approach</strong>.
+  We go beyond products to understand real business requirements, design the right
+  technology architecture, and execute projects with precision.
+  From conference rooms and boardrooms to large auditoriums and institutional campuses,
+  we manage solutions from concept to commissioning—ensuring reliability,
+  scalability, and long-term value.
+</p>
+
+<p>
+  In parallel, we are actively advancing <strong>IoT-based solutions</strong> that enable
+  smarter monitoring, automation, and control—helping organizations improve
+  operational efficiency, visibility, and decision-making.
+</p>
+
+<p>
+  At Rightway Intellect Solutions, our philosophy is simple and powerful:
+</p>
+
+<p><strong>ACT – Automate. Control. Thrive.</strong></p>
+
+<p>
+  We empower businesses and institutions with intelligent technology that performs
+  today and evolves for tomorrow.
+</p>
+<h2>Our Mission</h2>
+<p>
+  To deliver reliable, efficient, and intelligent technology solutions through
+  a consultative, end-to-end approach—enabling organizations to automate processes,
+  gain operational control, and achieve sustainable growth using advanced IT,
+  AV, IoT, and software solutions.
+</p>
+<h2>Our Vision</h2>
+<p>
+  To be a trusted and forward-thinking technology partner, transforming workplaces
+  and institutions into smart, connected, and future-ready environments through
+  innovation, integrity, and solution-driven expertise.
+</p>
+
+    
   </section>
 
   <!-- SERVICES -->
