FORMAL Update index.html

--- a/index.html
+++ b/index.html
@@ -279,9 +279,10 @@
     <h2>Our Services</h2>
     <div class="services">
       <div class="service-box">
-        <strong>IoT & Fleet Management</strong><br>
-        Smart tracking and monitoring solutions for vehicles and assets.
-      </div>
+  <strong>AV & Interactive Panel Solutions</strong><br>
+  Audio-Visual solutions, interactive panels, and active LED displays for
+  meeting rooms, classrooms, boardrooms, and auditoriums.
+</div>
       <div class="service-box">
         <strong>CCTV & Surveillance</strong><br>
         Secure and scalable surveillance systems for businesses.
@@ -294,11 +295,7 @@
         <strong>Automation Solutions</strong><br>
         Intelligent automation for improved efficiency and control.
       </div>
-      <div class="service-box">
-        <strong>Manpower Consulting</strong><br>
-        Skilled manpower solutions tailored to business needs.
-      </div>
-    </div>
+     </div>
   </section>
 
   <!-- CONTACT -->
