Formal Layout Update index.html
Keep THis is standard No.1

--- a/index.html
+++ b/index.html
@@ -251,7 +251,10 @@
   At Rightway Intellect Solutions, our philosophy is simple and powerful:
 </p>
 
-<p><strong>ACT – Automate. Control. Thrive.</strong></p>
+<p style="font-size:18px; font-weight:600; margin-top:20px;">
+  ACT – Automate. Control. Thrive.
+</p>
+
 
 <p>
   We empower businesses and institutions with intelligent technology that performs
